Finished email templates and added acts_as_list gem

--- a/app/views/customers/_own.html.haml
+++ b/app/views/customers/_own.html.haml
@@ -1,6 +1,6 @@
 - if customers.each do |customer|
   %li
-    = link_to customer do
+    = link_to [customer, :surveys] do
       %span.item
         %p= customer.name
         %small
