--- a/app/views/submission_notifier_mailer/notifier.html.haml
+++ b/app/views/submission_notifier_mailer/notifier.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{content: "text/html; charset=UTF-8", "http-equiv": "Content-Type"}
-    %title #{@submission.survey.name} rating notification
+    %title #{@alert.subject}
     %link{href: "https://fonts.googleapis.com/css?family=Roboto+Condensed", rel: "stylesheet"}
     :css
       body  {
@@ -16,19 +16,55 @@
         width: 50%;
         margin-bottom: 10px;
       }
-      h4 {
+      .wrapper p {
         color: #f72969;
       }
 
   %body
     = image_tag "logo.png", width: 200
-    %h2
-      = t("app.survey.email.text_primary", name: @alert.survey.name)
-    %p
-      @alert.body
 
     %h3
+      = @alert.survey.name
+
+    %p
+      = @alert.body
+
+    %h4
       = @answer.question.title
 
     - if @answer.question.question_type == "image"
       #{@answer.submission.sender} #{t("app.has_selected")} #{@answer.answer_image.image.name}
+    - elsif @answer.question.question_type == "rating"
+      .wrapper
+        - @answer.answer_raitings.each do |rate|
+          - unless rate.response.nil?
+            - if @alert.alert_filter.condition == "greater"
+              - if rate.response > @alert.alert_filter.answer.to_i
+                %p
+                  #{rate.raiting.name}:
+                  - 1.upto(rate.response) do |star|
+                    &#x2605;
+            - elsif @alert.alert_filter.condition == "equal"
+              - if rate.response == @alert.alert_filter.answer.to_i
+                %p
+                  #{rate.raiting.name}:
+                  - 1.upto(rate.response) do |star|
+                    &#x2605;
+            - elsif @alert.alert_filter.condition == "minor"
+              - if rate.response < @alert.alert_filter.answer.to_i
+                %p
+                  #{rate.raiting.name}:
+                  - 1.upto(rate.response) do |star|
+                    &#x2605;
+    - elsif @answer.question.question_type == "single"
+      #{@answer.submission.sender} #{t("app.has_selected")}
+      #{@answer.choice_answer.choice.title}
+    - elsif @answer.question.question_type == "list"
+      #{@answer.submission.sender} #{t("app.has_selected")}
+      #{@answer.choice_answer.choice.title}
+    - elsif @answer.question.question_type == "multiple"
+      #{@answer.submission.sender} #{t("app.has_selected")}
+      #{@answer.answer_multiple.choices.map(&:title).join(', ')}
+    - else
+      #{@answer.submission.sender} #{t("app.has_answered")}
+      #{@answer.answer_open.response}
