--- a/app/views/submissions/_submission.html.haml
+++ b/app/views/submissions/_submission.html.haml
@@ -1,13 +1,13 @@
 .modal-item
   .row
     .col-md-3
-      #{t "app.submission.index.submission_date"}:
+      /#{t "app.submission.index.submission_date"}:
       = I18n.l submission.created_at, format: :long
     .col-md-4
-      #{t "app.submission.index.submission_survey"}:
+      /#{t "app.submission.index.submission_survey"}:
       = submission.survey.name
     .col-md-3
-      #{t "app.submission.index.submission_by"}:
+      /#{t "app.submission.index.submission_by"}:
       = submission.sender
     .col-md-2
       = link_to fa_icon("eye", text: t("app.submission.index.submission_answers_button")),
