Remove text in account landing page

--- a/app/views/layouts/shared/_account_footer.html.haml
+++ b/app/views/layouts/shared/_account_footer.html.haml
@@ -10,10 +10,8 @@
                 type: "text"}
             %button.btn.btn-default{type: "submit"}
               = t "account.footer.button"
-      .col-md-5
-        .article-footer
-        %p
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam molestie erat nisi, quis tincidunt leo faucibus eget. Duis condimentum vel risus nec dapibus.
+      /.col-md-5
+      /.article-footer
     %hr
       .row
         .col-md-7
