Change survey report and remove submission sender foreign key

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -334,6 +334,12 @@ small.handle {
   &:last-child hr {
     display: none;
   }
+  .progress {
+    margin-bottom: 0;
+    .progress-bar {
+      background-color: #6d26ff;
+    }
+  }
 }
 
 
