--- a/app/assets/stylesheets/submissions.scss
+++ b/app/assets/stylesheets/submissions.scss
@@ -3,8 +3,15 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .submission-search {
-  margin-bottom: 15px;
+  h4 {
+    margin-top: 0;
+  }
   width: 70%;
+  padding: 15px;
+  margin-top: 15px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border-radius: 4px;
 }
 
 .submitted-answers {
