Complete survey report filter. Change csv and add pdf report

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -119,6 +119,10 @@ small.handle {
   border-top: 3px solid #6d26ff;
 }
 
+.ajax-pag {
+  margin-bottom: 10px;
+}
+
 .image-fields {
   margin-bottom: 15px;
   .media-body {
