--- a/app/views/surveys/_stats.html.haml
+++ b/app/views/surveys/_stats.html.haml
@@ -12,7 +12,7 @@
   = t "app.submission.show.complete"
 %span.counter
   %strong
-    #{fa_icon("check-square", text: get_percentage(@submissions.complete, @submissions.size))}
+    #{fa_icon("check-square", text: get_percentage(@submissions.complete, @submissions.size))}%
   = t "app.submission.show.completion_rate"
 %span.counter
   %strong
