--- a/app/views/submissions/index.csv.haml
+++ b/app/views/submissions/index.csv.haml
@@ -1,5 +1,15 @@
-- headers = ['Submission date', 'Survey name', 'User']
-= CSV.generate_line headers, :row_sep => ?\t, :quote_char => ?\
+- headers = [t("app.survey.export.id"), t("app.survey.export.answered_on"), t("app.survey.export.survey"), t("app.survey.export.question"), t("app.survey.export.submitted_by"), t("app.survey.export.response")]
+= CSV.generate_line headers, :row_sep => ?\t
+
 - @submissions.each do |submission|
-  = CSV.generate_line [submission.created_at.strftime("%m/%d/%Y at %I:%M%p"),
-    submission.survey.name, submission.sender], :row_sep => ?\t, :quote_char => ?\
+  - submission.answers.each do |answer|
+    - answers = answer.answer_date.response.strftime("%m/%d/%Y") if answer.answer_date.present?
+    - answers = answer.answer_open.response if answer.answer_open.present?
+    - answers = answer.answer_image.image.name if answer.answer_image.present?
+    - answers = answer.choice_answer.choice.title if answer.choice_answer.present?
+    - answers = answer.answer_multiple.choices.map(&:title).join(', ') if answer.answer_multiple.present?
+    - answers = display_rates(answer.answer_raitings).join(" ") if answer.answer_raitings.any?
+
+    = raw CSV.generate_line [answer.id, answer.created_at.strftime("%m/%d/%Y at %I:%M%p"),
+      submission.survey.name, answer.question.title, submission.sender, answers],
+      :row_sep => ?\t
