--- a/app/views/submissions/show.html.haml
+++ b/app/views/submissions/show.html.haml
@@ -36,21 +36,10 @@
                 %h4
                   = answer.question.title
                 - if answer.answer_open.present?
-                  %p
-                    #{t "app.answer.title"}:
-                    = answer.answer_open.response
+                  = answer.answer_open.response
                 - if answer.answer_date.present?
-                  %p
-                    #{t "app.answer.title"}:
-                    = answer.answer_date.response
-                - if answer.answer_raitings.any?
-                  - answer.answer_raitings.each do |rate|
-                    %p
-                      #{rate.raiting.name}:
-                      = rate.response
+                  = answer.answer_date.response
                 - if answer.answer_image.present?
-                  %p
-                    #{t "app.answer.title"}:
                   - if answer.answer_image.image.reference_path.present?
                     = image_tag answer.answer_image.image.reference_path,
                       class: "img-responsive", width: 80
@@ -58,13 +47,17 @@
                     = image_tag answer.answer_image.image.file.url(:thumb),
                       class: "img-responsive", width: 80
                 - if answer.choice_answer.present?
-                  %p
-                    #{t "app.answer.title"}:
-                    = answer.choice_answer.choice.try(:title)
+                  = answer.choice_answer.choice.try(:title)
                 - if answer.answer_multiple.present?
-                  %p
-                    #{t "app.answer.title"}:
-                    = answer.answer_multiple.choices.map(&:title).join(', ')
+                  = answer.answer_multiple.choices.map(&:title).join(', ')
+                - if answer.answer_raitings.any?
+                  - answer.answer_raitings.each do |rate|
+                    %p
+                      %span
+                        #{rate.raiting.name}:
+                        - if !rate.response.nil?
+                          - 1.upto(rate.response) do |star|
+                            &#x2605;
 
 
 
