--- a/app/views/questions/tables/_table_choice.html.haml
+++ b/app/views/questions/tables/_table_choice.html.haml
@@ -8,10 +8,10 @@
   %tbody
     - answers.each do |answer|
       %tr
-        %td.col-md-3= answer[0]
-        %td.col-md-1= answer[1]
-        %td.col-md-1 #{get_percentage(answer[1], answers.values.reduce(:+))}%
-        %td.col-md-7
+        %td.col-xs-3= answer[0]
+        %td.col-xs-1= answer[1]
+        %td.col-xs-1 #{get_percentage(answer[1], answers.values.reduce(:+))}%
+        %td.col-xs-7
           .progress
             .progress-bar{"aria-valuemax": "100", "aria-valuemin": "0",
               "aria-valuenow": "60", role: "progressbar",
