--- a/app/views/questions/tables/_table_rating.html.haml
+++ b/app/views/questions/tables/_table_rating.html.haml
@@ -8,10 +8,10 @@
   %tbody
     - answers.each do |answer|
       %tr
-        %td.col-md-3= answer.rate
-        %td.col-md-1= answer.count
-        %td.col-md-1= number_with_precision(answer.avg, precision: 2)
-        %td.col-md-7
+        %td.col-xs-3= answer.rate
+        %td.col-xs-1= answer.count
+        %td.col-xs-1= number_with_precision(answer.avg, precision: 2)
+        %td.col-xs-7
           .progress
             .progress-bar{"aria-valuemax": "100", "aria-valuemin": "0",
               "aria-valuenow": "60", role: "progressbar",
