--- a/app/views/questions/tables/_table_rating.html.haml
+++ b/app/views/questions/tables/_table_rating.html.haml
@@ -26,7 +26,9 @@
         = get_avg(answers)
       %td
 
-- if answers.any?
-  %h4.m-b-0= t("app.survey.report.pie")
-  = pie_chart answers.map{|x| [x[:rate], x[:count]]},
-    library: { pieSliceText: "value-and-percentage" }
+- if request.format.html?
+  .question-charts
+    - if answers.any?
+      %h4.m-b-0= t("app.survey.report.pie")
+      = pie_chart answers.map{|x| [x[:rate], x[:count]]},
+        library: { pieSliceText: "value-and-percentage" }
