--- a/app/views/questions/tables/_table_choice.html.haml
+++ b/app/views/questions/tables/_table_choice.html.haml
@@ -6,25 +6,32 @@
       %th= t "app.survey.show.percentage"
       %th
   %tbody
-    - answers.each do |answer|
+    - if answers.any?
+      - answers.each do |answer|
+        %tr
+          %td.col-xs-3= answer[0]
+          %td.col-xs-1= answer[1]
+          %td.col-xs-1 #{get_percentage(answer[1], answers.values.reduce(:+))}%
+          %td.col-xs-7
+            .progress
+              .progress-bar{"aria-valuemax": "100", "aria-valuemin": "0",
+                "aria-valuenow": "60", role: "progressbar",
+                style: "min-width: 2em; width: #{get_percentage(answer[1], answers.values.reduce(:+))}%"}
+                #{get_percentage(answer[1], answers.values.reduce(:+))}%
       %tr
-        %td.col-xs-3= answer[0]
-        %td.col-xs-1= answer[1]
-        %td.col-xs-1 #{get_percentage(answer[1], answers.values.reduce(:+))}%
-        %td.col-xs-7
-          .progress
-            .progress-bar{"aria-valuemax": "100", "aria-valuemin": "0",
-              "aria-valuenow": "60", role: "progressbar",
-              style: "min-width: 2em; width: #{get_percentage(answer[1], answers.values.reduce(:+))}%"}
-              #{get_percentage(answer[1], answers.values.reduce(:+))}%
-    %tr
-      %td
-        %strong Total
-      %td
-        %strong= answers.values.reduce(:+)
-      %td
-        %strong #{total_percentage(answers)}%
-      %td
+        %td
+          %strong Total
+        %td
+          %strong= answers.values.reduce(:+)
+        %td
+          %strong #{total_percentage(answers)}%
+        %td
+    - else
+      %tr
+        %td= t "app.no_results"
+        %td
+        %td
+        %td
 
 - if request.format.html?
   .question-charts
