--- a/app/views/questions/tables/_table_rating.html.haml
+++ b/app/views/questions/tables/_table_rating.html.haml
@@ -6,25 +6,32 @@
       %th= t "app.survey.show.score"
       %th
   %tbody
-    - answers.each do |answer|
+    - if answers.present?
+      - answers.each do |answer|
+        %tr
+          %td.col-xs-3= answer.rate
+          %td.col-xs-1= answer.count
+          %td.col-xs-1= number_with_precision(answer.avg, precision: 2)
+          %td.col-xs-7
+            .progress
+              .progress-bar{"aria-valuemax": "100", "aria-valuemin": "0",
+                "aria-valuenow": "60", role: "progressbar",
+                style: "min-width: 2em; width: #{get_percentage(answer.avg, 10)}%"}
+                = number_with_precision(answer.avg, precision: 2)
       %tr
-        %td.col-xs-3= answer.rate
-        %td.col-xs-1= answer.count
-        %td.col-xs-1= number_with_precision(answer.avg, precision: 2)
-        %td.col-xs-7
-          .progress
-            .progress-bar{"aria-valuemax": "100", "aria-valuemin": "0",
-              "aria-valuenow": "60", role: "progressbar",
-              style: "min-width: 2em; width: #{get_percentage(answer.avg, 10)}%"}
-              = number_with_precision(answer.avg, precision: 2)
-    %tr
-      %td
-        %strong Total
-      %td
-        %strong= answers.map{|x| x[:count]}.reduce(:+)
-      %td
-        = get_avg(answers)
-      %td
+        %td
+          %strong Total
+        %td
+          /%strong= answers.map{|x| x[:count]}.reduce(:+)
+        %td
+          = get_avg(answers)
+        %td
+    - else
+      %tr
+        %td= t "app.no_results"
+        %td
+        %td
+        %td
 
 - if request.format.html?
   .question-charts
