--- a/app/views/submissions/_submission.html.haml
+++ b/app/views/submissions/_submission.html.haml
@@ -11,6 +11,5 @@
       = submission.sender
     .col-md-2
       = link_to fa_icon("eye", text: t("app.submission.index.submission_answers_button")),
-        [submission.survey, submission],
-        "data-behavior": "submission-show", class: "btn btn-xs btn-default pull-right"
+        submission, class: "btn btn-xs btn-default pull-right", remote: true
 .submission-content
