--- a/app/views/submissions/_show.html.haml
+++ b/app/views/submissions/_show.html.haml
@@ -17,7 +17,7 @@
                 = answer.answer_open.response
               - if answer.answer_date.present?
                 = answer.answer_date.response
-              - if answer.answer_image.present?
+              - if answer.answer_image.present? && answer.answer_image.image.present?
                 - if answer.answer_image.image.reference_path.present?
                   = image_tag answer.answer_image.image.reference_path,
                     class: "img-responsive", width: 80
