--- a/app/views/submissions/_submission.html.haml
+++ b/app/views/submissions/_submission.html.haml
@@ -8,7 +8,10 @@
       = submission.survey.name
     .col-md-3
       /#{t "app.submission.index.submission_by"}:
-      = submission.sender
+      - if submission.complete?
+        = fa_icon "check-square", text: t("app.submission.index.complete")
+      - else
+        = fa_icon "sign-out", text: t("app.submission.index.incomplete")
     .col-md-2
       = link_to fa_icon("eye", text: t("app.submission.index.submission_answers_button")),
         submission, class: "btn btn-xs btn-default pull-right", remote: true
